# ha-solar-history

./: .gitignore  .python-version  LICENSE  Pipfile  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: hacs.yaml  hassfest.yaml
custom_components/ha_solar_history/: manifest.json
