[project]
name = "ha_solar_history"
version = "0.0.1"
authors = [
  { name="Nathan Merritt", email="nathan@gnmerritt.net" },
]
description = "Home Assistant integration for GAF Timeberline Solar roof systems"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gnmerritt/ha-solar-history"
"Bug Tracker" = "https://github.com/gnmerritt/ha-solar-history/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"